[gd_scene load_steps=11 format=3 uid="uid://i25ni6j2vywn"]

[ext_resource type="FontFile" uid="uid://b354cldnji4jc" path="res://assets/fonts/Quantico/Quantico-BoldItalic.ttf" id="1_keu27"]
[ext_resource type="Script" uid="uid://bdg40fuu2ytnj" path="res://ui/level/settings_menu.gd" id="1_vii2c"]
[ext_resource type="Theme" uid="uid://bdukti3wo6tch" path="res://assets/themes/ui_menu_theme.tres" id="2_vii2c"]
[ext_resource type="Texture2D" uid="uid://dlqldn6pi6atq" path="res://assets/images/slider icon.png" id="3_4mmpq"]
[ext_resource type="StyleBox" uid="uid://d13rv4w82fbt3" path="res://assets/themes/slider.tres" id="4_4ul3s"]
[ext_resource type="StyleBox" uid="uid://djh5fvhpsx5wu" path="res://assets/themes/slider_area.tres" id="5_whojx"]
[ext_resource type="StyleBox" uid="uid://sxwbs5al0nli" path="res://assets/themes/btn_bg_normal.tres" id="6_4c5b4"]
[ext_resource type="StyleBox" uid="uid://c5245q3vo46do" path="res://assets/themes/btn_bg_pressed.tres" id="7_1fuu5"]
[ext_resource type="StyleBox" uid="uid://bm1hufi44t4oo" path="res://assets/themes/btn_bg_hover.tres" id="8_tsykx"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ejwgg"]
color = Color(0.096800014, 0.88, 0.29259998, 1)
thickness = 4

[node name="SettingsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 127
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 128
script = ExtResource("1_vii2c")

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.19199999, 0.5504, 0.96, 0.6666667)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_fonts/font = ExtResource("1_keu27")
theme_override_font_sizes/font_size = 64
text = "SETTINGS MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxLine_ejwgg")

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 200

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_vii2c")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_font_sizes/font_size = 28
text = "Main Volume"

[node name="MainVolume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../ReturnBtn")
focus_neighbor_bottom = NodePath("../../HSplitContainer2/MusicVolume")
focus_next = NodePath("../../HSplitContainer2/MusicVolume")
focus_previous = NodePath("../../ReturnBtn")
theme_override_icons/grabber = ExtResource("3_4mmpq")
theme_override_icons/grabber_highlight = ExtResource("3_4mmpq")
theme_override_icons/grabber_disabled = ExtResource("3_4mmpq")
theme_override_styles/slider = ExtResource("4_4ul3s")
theme_override_styles/grabber_area = ExtResource("5_whojx")
theme_override_styles/grabber_area_highlight = ExtResource("5_whojx")
max_value = 1.0
step = 0.01

[node name="HSplitContainer2" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 200

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_vii2c")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_font_sizes/font_size = 28
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../HSplitContainer/MainVolume")
focus_neighbor_bottom = NodePath("../../HSplitContainer3/SfxVolume")
focus_next = NodePath("../../HSplitContainer3/SfxVolume")
focus_previous = NodePath("../../HSplitContainer/MainVolume")
theme_override_icons/grabber = ExtResource("3_4mmpq")
theme_override_icons/grabber_highlight = ExtResource("3_4mmpq")
theme_override_icons/grabber_disabled = ExtResource("3_4mmpq")
theme_override_styles/slider = ExtResource("4_4ul3s")
theme_override_styles/grabber_area = ExtResource("5_whojx")
theme_override_styles/grabber_area_highlight = ExtResource("5_whojx")
max_value = 1.0
step = 0.01

[node name="HSplitContainer3" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 200

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_vii2c")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_font_sizes/font_size = 28
text = "SFX Volume"

[node name="SfxVolume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../HSplitContainer2/MusicVolume")
focus_neighbor_bottom = NodePath("../../HSplitContainer4/VoiceVolume")
focus_next = NodePath("../../HSplitContainer4/VoiceVolume")
focus_previous = NodePath(".")
theme_override_icons/grabber = ExtResource("3_4mmpq")
theme_override_icons/grabber_highlight = ExtResource("3_4mmpq")
theme_override_icons/grabber_disabled = ExtResource("3_4mmpq")
theme_override_styles/slider = ExtResource("4_4ul3s")
theme_override_styles/grabber_area = ExtResource("5_whojx")
theme_override_styles/grabber_area_highlight = ExtResource("5_whojx")
max_value = 1.0
step = 0.01

[node name="HSplitContainer4" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 200

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer4"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_vii2c")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_font_sizes/font_size = 28
text = "Voice Volume"

[node name="VoiceVolume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../HSplitContainer3/SfxVolume")
focus_neighbor_bottom = NodePath("../../ReturnBtn")
focus_next = NodePath("../../ReturnBtn")
focus_previous = NodePath("../../HSplitContainer3/SfxVolume")
theme_override_icons/grabber = ExtResource("3_4mmpq")
theme_override_icons/grabber_highlight = ExtResource("3_4mmpq")
theme_override_icons/grabber_disabled = ExtResource("3_4mmpq")
theme_override_styles/slider = ExtResource("4_4ul3s")
theme_override_styles/grabber_area = ExtResource("5_whojx")
theme_override_styles/grabber_area_highlight = ExtResource("5_whojx")
max_value = 1.0
step = 0.01

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxLine_ejwgg")

[node name="ReturnBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HSplitContainer4/VoiceVolume")
focus_neighbor_bottom = NodePath("../HSplitContainer/MainVolume")
focus_next = NodePath("../HSplitContainer/MainVolume")
focus_previous = NodePath("../HSplitContainer4/VoiceVolume")
theme = ExtResource("2_vii2c")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_colors/font_focus_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.30659997, 0.12599999, 1)
theme_override_colors/font_hover_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_styles/normal = ExtResource("6_4c5b4")
theme_override_styles/pressed = ExtResource("7_1fuu5")
theme_override_styles/hover = ExtResource("8_tsykx")
text = "RETURN"

[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MainVolume" to="." method="_on_main_volume_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MainVolume" to="." method="_on_main_volume_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/HSplitContainer2/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer2/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/HSplitContainer3/SfxVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer3/SfxVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/HSplitContainer4/VoiceVolume" to="." method="_on_voice_volume_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer4/VoiceVolume" to="." method="_on_voice_volume_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ReturnBtn" to="." method="_on_return_btn_pressed"]
